# easy-template

./: .gitignore  README.md  cli.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  tox.ini
compilation/: compile.ps1  compile.sh
docs/: cli.md  compiling.md  deployment.md  environment_variables.md  introduction.md  jinja funcs.md  logging.md  quickstart.md  usage.md  variable_arguments.md  vars.md
example_external_functions/filters/: filters.py
example_files/: config.yml  example_script.sh  readme.txt  readme_template.md.j2  vars.yml
example_filters/filters_module/: filters.py
examples/example_external_functions/filters/: filters.py
examples/single_file_example/: config.yml  run_example.ps1  run_example.sh
examples/tree_example/: run_example.ps1  run_example.sh  template_vars.yml
ez_temp/: __main__.py  cli.py  config.py  defaults.py  requirements.txt
ez_temp/bootstraping/: default_config.py  default_configs.py  example_files.py
ez_temp/ingester/: environment_variables.py  vars.py
ez_temp/outputs/: __init__.py  files.py  output.py
ez_temp/outputs/tests/: test_outputs.py
ez_temp/templater/: __init__.py  encodings.py  jinja_funcs.py  templates.py
ez_temp/templates/: __init__.py  encodings.py  jinja_funcs.py  templates.py
ez_temp/templates/tests/: test_encoding.py  test_jinja_functions.py  test_templating.py
ez_temp/tests/: ezt.tmp  test_cli.py  test_config.py  test_main.py
ez_temp/variables/: __init__.py  environment_variables.py  vars.py
tests/template_tree/: pyproject.toml
tests/template_tree/project/: __main__.py  cli.py
