[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ez_temp"]

[project]
name = 'Easy-Template'
description = 'Quick and Dirty Jinja templating from CLI with YAML'
authors = [
    {name = 'Cam Ratchford', email = 'camratchford@gmail.com'},
]

classifiers = [
    'Development Status :: 1 - Testing required',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3 :: Only',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: System Administrators',
    'Operating System :: Windows :: Windows',
    'Environment :: Console',
    'Environment :: Windows',
    'Environment :: MacOS X',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
version = "0.0.3"
requires-python = '>=3.7'
dependencies = [
    "click==8.1.7",
    "colorama==0.4.6",
    "Jinja2==3.1.2",
    "python-magic==0.4.27",
    "python-magic-bin==0.4.14",
    "markdown-it-py==3.0.0",
    "MarkupSafe==2.1.3",
    "mdurl==0.1.2",
    "Pygments==2.16.1",
    "PyYAML==6.0.1",
    "rich==13.6.0",
    "typing_extensions==4.8.0",
]

[project.optional-dependencies]
development = [
    "ghp-import==2.1.0",
    "importlib-metadata==6.8.0",
    "Markdown==3.5.1",
    "mergedeep==1.3.4",
    "mkdocs==1.5.3",
    "packaging==23.2",
    "pathspec==0.11.2",
    "platformdirs==3.11.0",
    "python-dateutil==2.8.2",
    "pyyaml_env_tag==0.1",
    "six==1.16.0",
    "watchdog==3.0.0",
    "zipp==3.17.0",
]
windows_executable = [
    "altgraph==0.17.4",
    "pefile==2023.2.7",
    "pyinstaller==6.1.0",
    "pyinstaller-hooks-contrib==2023.10",
    "pywin32-ctypes==0.2.2",
]

[project.urls]
Homepage = 'https://github.com/camratchford/Easy-Template'
Source = 'https://github.com/camratchford/Easy-Template'

[project.scripts]
ezt = "ez_temp.cli:run"